init 4.1.5.6 alpha 5 + update something